--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,11 +9,23 @@ html, body {
 	text-align: center;
 	margin: 25px 0px -75px 0px;
 }
-#map {
+#banner {
+	position: absolute;
+	background-image: url("https://cdn.pixabay.com/photo/2016/01/19/15/48/luggage-1149289_960_720.jpg");
+	background-attachment: fixed;
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
 	height: 400px;
 	width: 80%;
 	top: 10%;
 	left: 10%;
+}
+#map {
+	height: 400px;
+	width: 50%;
+	top: 0px;
+	left: 0px;
 }
 .inputAndButton {
 	position: absolute;
@@ -27,10 +39,16 @@ html, body {
 }
 .display {
 	height: 400px;
-	position: absolute;
 	width: 80%;
+	position: absolute;
+	left: 10%;
 	bottom: 5%;
-	left: 11%;
+}
+.display1 {
+	height: 400px;
+}
+.display2 {
+	height: 400px;
 	overflow: auto;
 }
 .imgWrap {
