--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,10 +52,14 @@ html, body {
 	overflow: auto;
 }
 .imgWrap {
-	padding: 5px;
+	padding: 0px;
 	margin: 0px;
 }
 .image {
 	padding: 0px;
  	vertical-align: middle;
+}
+.weatherWrap {
+	top: 20px;
+	left: 5px;
 }
