--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -51,6 +51,15 @@ html, body {
 	height: 400px;
 	overflow: auto;
 }
+.itemDisplay {
+	height: 100px;
+	border-width: 1px;
+	border-color: lightgray;
+	border: solid;
+	font-size: 200%;
+	line-height: 50px;
+	text-align: center;
+}
 .imgWrap {
 	padding: 0px;
 	margin: 0px;
